--- a/index.html
+++ b/index.html
@@ -7,20 +7,80 @@
   </head>
   <body>
     <header>
-      <a href="">WEBSTUDIO</a>
+      <a href="https://ruslan777lukas.github.io/goit-markup-hw-01/"
+        >WEBSTUDIO</a
+      >
+
       <nav>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+11000111-11-11">+11(000)111-11-11</li>
         </ul>
       </nav>
+
+      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+      <a href="tel:+11000111-11-11">+11(000)111-11-11</a>
     </header>
     <main>
       <h1>Effective Solutions for Your Business</h1>
+      <button type="button">Order Service</button>
+      <section>
+        <h3>Strategy</h3>
+        <p>
+          Our goal is to identify the business problem to walk away with the
+          perfect and creative solution.
+        </p>
+        <h3>Punctuality</h3>
+        <p>
+          Bring the key message to the brand's audience for the best price
+          within the shortest possible time.
+        </p>
+        <h3>Diligence</h3>
+        <p>
+          Research and confirm brands that present the strongest digital growth
+          opportunities and minimize risk.
+        </p>
+        <h3>Technologies</h3>
+        <p>
+          Design practice focused on digital experiences. We bring forth a deep
+          passion for problem-solving.
+        </p>
+      </section>
+      <section>
+        <h2>Our Team</h2>
+        <ul>
+          <li>
+            <img src=".\images\img2.jpg" width="90" alt="Mark Guerrero" />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src=".\images\img3.jpg" width="90" alt="Tom Ford" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src=".\images\img4.jpg" width="90" alt="Camila Garcia" />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src=".\images\img5.jpg" width="90" alt="Daniel Wilson" />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <footer></footer>
+    <footer>
+      <a href="https://ruslan777lukas.github.io/goit-markup-hw-01/"
+        >WEBSTUDIO</a
+      >
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
