--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
   </head>
   <body>
     <header>
-      <a href="https://ruslan777lukas.github.io/goit-markup-hw-01/"
-        >WEBSTUDIO</a
-      >
-
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
           <li><a href="">Studio</a></li>
           <li><a href="">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+11000111-11-11">+11(000)111-11-11</a>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11(000)111-11-11</a></li>
+        </ul>
+      </address>
     </header>
+
     <main>
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
@@ -74,9 +75,7 @@
       </section>
     </main>
     <footer>
-      <a href="https://ruslan777lukas.github.io/goit-markup-hw-01/"
-        >WEBSTUDIO</a
-      >
+      <a href="./index.html">WebStudio"</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
